--- a/TaskManagementSystem.Api/Views/_ViewImports.cshtml
+++ b/TaskManagementSystem.Api/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using TaskManagementSystem
-@using TaskManagementSystem.Models
+﻿@using TaskManagementSystem.Api
+@using TaskManagementSystem.Api.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
